package(default_visibility = ["//visibility:public"])

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_bundle",
)

container_image(
    name = "protokube-image",
    base = "@distroless_base//image",
    cmd = ["/protokube"],
    files = [
        "//channels/cmd/channels",
        "//protokube/cmd/protokube",
    ],
    stamp = True,
)

container_bundle(
    name = "protokube",
    images = {
        "protokube:{STABLE_PROTOKUBE_TAG}": "protokube-image",
    },
)

load("//tools:gzip.bzl", "gzip")

gzip(
    name = "protokube.tar.gz",
    src = "protokube.tar",
)

load("//tools:hashes.bzl", "hashes")

hashes(
    name = "protokube.tar.gz.hashes",
    src = "protokube.tar.gz",
)

container_image(
    name = "kops-controller",
    base = "@distroless_base//image",
    cmd = ["/usr/bin/kops-controller"],
    directory = "/usr/bin/",
    files = [
        "//cmd/kops-controller",
    ],
    stamp = True,
)
