load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["keypair_test.go"],
    deps = [
        "//pkg/apis/kops:go_default_library",
        "//pkg/diff:go_default_library",
        "//upup/pkg/fi:go_default_library",
        "//upup/pkg/fi/fitasks:go_default_library",
        "//util/pkg/vfs:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//tests/codecs:all-srcs",
        "//tests/integration/channel:all-srcs",
        "//tests/integration/conversion:all-srcs",
        "//tests/integration/create_cluster:all-srcs",
        "//tests/integration/update_cluster:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
