load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["mock_gce_cloud.go"],
    importpath = "k8s.io/kops/cloudmock/gce",
    visibility = ["//visibility:public"],
    deps = [
        "//cloudmock/gce/mockcloudresourcemanager:go_default_library",
        "//cloudmock/gce/mockcompute:go_default_library",
        "//cloudmock/gce/mockdns:go_default_library",
        "//cloudmock/gce/mockiam:go_default_library",
        "//cloudmock/gce/mockstorage:go_default_library",
        "//dnsprovider/pkg/dnsprovider:go_default_library",
        "//dnsprovider/pkg/dnsprovider/providers/google/clouddns:go_default_library",
        "//pkg/apis/kops:go_default_library",
        "//pkg/cloudinstances:go_default_library",
        "//upup/pkg/fi:go_default_library",
        "//upup/pkg/fi/cloudup/gce:go_default_library",
        "//vendor/google.golang.org/api/cloudresourcemanager/v1:go_default_library",
        "//vendor/google.golang.org/api/compute/v1:go_default_library",
        "//vendor/google.golang.org/api/storage/v1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)
