load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/kops/cmd/kops-controller",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/kops-controller/controllers:go_default_library",
        "//cmd/kops-controller/pkg/config:go_default_library",
        "//cmd/kops-controller/pkg/nodeconfiguration:go_default_library",
        "//pkg/apis/kops/v1alpha2:go_default_library",
        "//pkg/nodeidentity:go_default_library",
        "//pkg/nodeidentity/aws:go_default_library",
        "//pkg/nodeidentity/do:go_default_library",
        "//pkg/nodeidentity/gce:go_default_library",
        "//pkg/nodeidentity/openstack:go_default_library",
        "//pkg/proto/nodeconfiguration:go_default_library",
        "//upup/pkg/fi/cloudup:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
        "//vendor/google.golang.org/grpc/credentials:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/client-go/dynamic:go_default_library",
        "//vendor/k8s.io/client-go/plugin/pkg/client/auth/gcp:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
        "//vendor/k8s.io/klog/klogr:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime:go_default_library",
        "//vendor/sigs.k8s.io/controller-runtime/pkg/manager:go_default_library",
        "//vendor/sigs.k8s.io/yaml:go_default_library",
    ],
)

go_binary(
    name = "kops-controller",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
    "container_push",
    "container_bundle",
)

container_image(
    name = "image",
    base = "@distroless_base//image",
    cmd = ["/usr/bin/kops-controller"],
    user = "1000",
    directory = "/usr/bin/",
    files = [
        "//cmd/kops-controller",
    ],
)

container_push(
    name = "push-image",
    format = "Docker",
    image = ":image",
    registry = "{STABLE_DOCKER_REGISTRY}",
    repository = "{STABLE_DOCKER_IMAGE_PREFIX}kops-controller",
    tag = "{STABLE_KOPS_CONTROLLER_TAG}",
)

container_bundle(
    name = "image-bundle",
    images = {
        "{STABLE_DOCKER_IMAGE_PREFIX}kops-controller:{STABLE_KOPS_CONTROLLER_TAG}": "image",
    },
)
