load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/kops/cmd/kops-server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apiserver/cmd/server:go_default_library",
        "//vendor/k8s.io/apiserver/pkg/util/logs:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
    ],
)

go_binary(
    name = "kops-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
