load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/kops/cmd/kops",
    visibility = ["//visibility:private"],
    deps = ["//cmd/kops/cmds:go_default_library"],
)

go_binary(
    name = "kops",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = {
        "k8s.io/kops.Version": "{STABLE_KOPS_VERSION}",  # keep
        "k8s.io/kops.GitVersion": "{BUILD_SCM_REVISION}",  # keep
    },
)
