load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/kops/cmd/nodeup",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//nodeup/pkg/bootstrap:go_default_library",
        "//upup/pkg/fi/nodeup:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_binary(
    name = "nodeup",
    out = select({
        "@io_bazel_rules_go//go/platform:linux_amd64": "linux-amd64/nodeup",
        "@io_bazel_rules_go//go/platform:linux_arm64": "linux-arm64/nodeup",
        "@io_bazel_rules_go//go/platform:darwin_amd64": "darwin-amd64/nodeup",
    }),
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
