load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "apply.go",
        "main.go",
        "up.go",
    ],
    importpath = "k8s.io/kops/examples/kops-api-example",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/apis/kops:go_default_library",
        "//pkg/client/simple/vfsclientset:go_default_library",
        "//upup/pkg/fi:go_default_library",
        "//upup/pkg/fi/cloudup:go_default_library",
        "//upup/pkg/fi/utils:go_default_library",
        "//util/pkg/vfs:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
    ],
)

go_binary(
    name = "kops-api-example",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
