load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["bindata.go"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "bindata",
    srcs = glob(
        ["*"],
        exclude = [
            "bindata.go",
            "BUILD.bazel",
        ],
    ),
    outs = ["bindata.go"],
    cmd = """
$(location //vendor/github.com/jteeuwen/go-bindata/go-bindata:go-bindata) \
  -o "$(OUTS)" -pkg model \
  -prefix $$(pwd) \
  -prefix federation/model $(SRCS)
""",
    tools = [
        "//vendor/github.com/jteeuwen/go-bindata/go-bindata",
    ],
)
