load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["kubernetesresource.go"],
    importpath = "k8s.io/kops/federation/tasks",
    visibility = ["//visibility:public"],
    deps = [
        "//federation/targets/kubernetestarget:go_default_library",
        "//upup/pkg/fi:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/validation/field:go_default_library",
    ],
)
