load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["machine_types.go"],
    importpath = "k8s.io/kops/hack/machine_types",
    visibility = ["//visibility:private"],
    deps = [
        "//upup/pkg/fi/cloudup/awsup:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/ec2:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
    ],
)

go_binary(
    name = "machinetypes",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
