package(default_visibility = ["//visibility:public"])

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "node-authorizer",
    base = "@debian_hyperkube_base_amd64//image",
    cmd = ["/usr/bin/node-authorizer"],
    directory = "/usr/bin/",
    files = [
        "//node-authorizer/cmd/node-authorizer",
    ],
)
