load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "interface.go",
        "plugins.go",
    ],
    importpath = "k8s.io/kops/pkg/acls",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/kops:go_default_library",
        "//util/pkg/vfs:go_default_library",
    ],
)
